# coverage-analyzer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  web_ui.py
docs/: DESIGN_DOCUMENT.md
examples/: custom_coverage_report.txt  custom_output.json  sample_coverage_report.txt  sample_output.json
src/: __init__.py
src/analyzer/: __init__.py  coverage_analyzer.py  prioritization.py
src/llm/: __init__.py  llm_client.py  prompts.py
src/parser/: __init__.py  coverage_parser.py
src/predictor/: __init__.py  closure_predictor.py
src/utils/: __init__.py  cache.py  rate_limiter.py
tests/: test_analyzer.py  test_parser.py  test_prioritization.py
